# Front-End-Portfolio

./: LICENSE  README.md  icon_urls.txt  package-lock.json  package.json  webpack.config.js
client/app/: actions.js  index.js  reducers.js
client/app/BartendingDrills/: component.js
client/app/Calculator/: component.js
client/app/Chess/: component.js
client/app/Drum/: component.js  container.js
client/app/FriendCard/: actionCreators.js  component.js  reducer.js
client/app/FriendCard/FriendSearch/: actionCreators.js  component.js  container.js  reducer.js
client/app/FriendCard/FriendsList/: component.js
client/app/GDP/: component.js
client/app/HeatMap/: component.js
client/app/Layout/: actionCreators.js  component.js  container.js  reducer.js
client/app/Main/: component.js  container.js  reducer.js
client/app/Main/Back/: actionCreators.js  component.js  container.js
client/app/ProductLanding/: component.js
client/app/QueueCard/: actionCreators.js  component.js  container.js  reducer.js
client/app/QuoteGen/: component.js  container.js
client/app/Registration/: component.js
client/app/Scatterplot/: component.js
client/app/SocialCard/: actionCreators.js  reducer.js
client/app/TechDocs/: component.js
client/app/Tribute/: component.js
client/public/: index.html
client/public/styles/: styles.scss
config/webpack/: webpack.common.js  webpack.prod.js
native/: Cargo.toml
native/src/: lib.rs
sample_data/: test_friends.json  test_posts.json  test_songs.json
server/: server.js
server/routes/api/: click.js
(+101 files in other folders)
