[package]
name = "neon_sandbox"
version = "0.1.0"
authors = ["Quexington <quexington@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_sandbox"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
bson = "0.12.2"
mongodb = "0.3.10"
